--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "require": {
         "php": "^7.1||^8.0",
-        "tecnickcom/tcpdf": "^6.2.22",
+        "tecnickcom/tcpdf": "^6.2.22|dev-main",
         "setasign/fpdi": "^2"
     },
     "conflict": {
